<resources>
    <string name="app_name">xGameClient</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <string name="text_create_app">On Create App</string>
    <string name="text_in_service">In Service</string>

    <string name="start_service">Start service</string>
    <string name="stop_service">Stop service</string>

    <string name="account_info_label">Account info</string>
    <string name="account_info_login">Login</string>
    <string name="account_info_password">Password</string>
    <string name="account_info_refresh_time">Refresh time (m)</string>
    <string name="account_info_uni_number">Uni #</string>
    <string name="account_info_auto_login">Auto login</string>
    <string name="account_info_save">Save</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="status_notification_title_template">Status: %1$s</string>

    <!-- TODO: remove this placeholder text -->
    <string name="status_notification_placeholder_text_template">You said %1$s and lorem ipsum dolor
        sit amet, consectetur adipiscing elit. Etiam non enim magna. Morbi dictum, velit vel semper
        venenatis, magna odio volutpat velit, at ullamcorper nulla lacus sed turpis. Pellentesque
        vitae metus elit, nec tincidunt tellus. Integer sed nisl sem, ullamcorper ornare lacus. Duis
        ac mauris sed massa congue volutpat. Donec sed erat sit amet turpis viverra rhoncus sit amet
        nec magna. Donec lacinia ligula at libero volutpat volutpat nec nec tortor.
    </string>

    <string name="action_share">Share</string>
    <string name="action_reply">Reply</string>
</resources>
